--- a/Project/index.html
+++ b/Project/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div id="hidden-card-body" class="card-body">
                         <p class="card-text">data</p>
-                        <img src="" alt="" class="card-img-top">
+                        <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                         <h5 class="card-title">meteo</h5>
                         <div id="alert" class="badge rounded-pill text-dark"></div>
                         <ul class="list-group list-group-flush">
@@ -119,7 +119,7 @@
                         </div>
                         <div id="card-milano" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="" alt="" class="card-img-top">
+                            <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-milano" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -138,7 +138,7 @@
                         </div>
                         <div id="card-londra" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="" alt="" class="card-img-top">
+                            <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-londra" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -157,7 +157,7 @@
                         </div>
                         <div id="card-tokyo" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="" alt="" class="card-img-top">
+                            <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-tokyo" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
@@ -176,7 +176,7 @@
                         </div>
                         <div id="card-newyork" class="card-body">
                             <p class="card-text">data</p>
-                            <img src="" alt="" class="card-img-top">
+                            <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                             <h5 class="card-title">meteo(es. nuvoloso)</h5>
                             <div id="alert-newyork" class="badge rounded-pill text-dark"></div>
                             <ul class="list-group list-group-flush">
