--- a/Project/weather.html
+++ b/Project/weather.html
@@ -60,15 +60,16 @@
                     <img src="favicon.ico" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
-                <div class="collapse navbar-collapse">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </div>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
-                        onclick="toggleDarkMode()">
-                    <label class="form-check-label" for="toggle-mode">Dark Mode</label>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dropdown-navbar"
+                    aria-controls="dropdown-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="dropdown-navbar">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        </il>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -197,7 +198,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -239,7 +241,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -281,7 +284,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -323,7 +327,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -365,7 +370,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -407,7 +413,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
@@ -449,7 +456,8 @@
                                     <div
                                         class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
-                                        <img src="images/missing_image.png" alt="missing image" class="card-img-top weekly-icon">
+                                        <img src="images/missing_image.png" alt="missing image"
+                                            class="card-img-top weekly-icon">
                                         <p class="mb-0">descrizione</p>
                                         <p class="mb-0">temp max - min</p>
                                         <p class="mb-0">precipitazioni - vento</p>
