--- a/Project/index.html
+++ b/Project/index.html
@@ -53,15 +53,22 @@
                     <img src="favicon.ico" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
-                <div class="collapse navbar-collapse">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="weather.html">Previsioni Settimanali</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#dropdown-navbar" aria-controls="dropdown-navbar"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="dropdown-navbar">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="weather.html">Previsioni Settimanali</a></li>
+                        </il>
+                    </ul>
+                    <div class="form-check form-switch d-flex">
+                        <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
+                            onclick="toggleDarkMode()">
+                        <label class="form-check-label" for="toggle-mode">Dark Mode</label>
                     </div>
-                </div>
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
-                        onclick="toggleDarkMode()">
-                    <label class="form-check-label" for="toggle-mode">Dark Mode</label>
                 </div>
             </div>
         </nav>
