--- a/Project/index.html
+++ b/Project/index.html
@@ -53,9 +53,8 @@
                     <img src="favicon.ico" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#dropdown-navbar" aria-controls="dropdown-navbar"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dropdown-navbar"
+                    aria-controls="dropdown-navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="dropdown-navbar">
@@ -79,9 +78,8 @@
             <!-- Main + search bar -->
             <div class="p-3 pb-md-4 mx-auto text-center">
                 <h1>Meteo Live nel Mondo</h1>
-                <p>Usa la barra di ricerca per cercare una città specifica oppure consulta le principali città nelle
-                    card sottostanti.</p>
-                <p>Cliccando su una città potrai vedere le previsioni settimanali e delle informazioni aggiuntive.<a
+                <p>Usa la barra di ricerca per cercare una città specifica oppure consulta le principali città nelle card sottostanti.</p>
+                <p>Cliccando su una città potrai vedere le previsioni settimanali e delle informazioni aggiuntive. <a
                         href="#*">*</a></p>
             </div>
 
@@ -239,8 +237,8 @@
 
     <!-- FOOTER -->
     <footer class="footer p-3 mt-auto border-top bg-light">
-        <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to
-                top</a></p>
+        <p class="float-end"><a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="#">Back to top</a>
+        </p>
         <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
     </footer>
 
