--- a/Project/weather.html
+++ b/Project/weather.html
@@ -68,8 +68,12 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        </il>
                     </ul>
+                    <div class="form-check form-switch d-flex">
+                        <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
+                            onclick="toggleDarkMode()">
+                        <label class="form-check-label" for="toggle-mode">Dark Mode</label>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -142,7 +146,7 @@
                             <div class="collapse card-body pt-0" id="giorno1">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -185,7 +189,7 @@
                             <div class="collapse card-body pt-0" id="giorno2">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -228,7 +232,7 @@
                             <div class="collapse card-body pt-0" id="giorno3">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -271,7 +275,7 @@
                             <div class="collapse card-body pt-0" id="giorno4">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -314,7 +318,7 @@
                             <div class="collapse card-body pt-0" id="giorno5">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -357,7 +361,7 @@
                             <div class="collapse card-body pt-0" id="giorno6">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
@@ -400,7 +404,7 @@
                             <div class="collapse card-body pt-0" id="giorno7">
                                 <div class="row pt-2">
                                     <div
-                                        class="col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
+                                        class="giornata-white-space col-12 mb-3 pb-2 ps-0 pe-0 border border-start-0 border-top-0 border-end-0 border-2">
                                         <h6>Info di Giornata</h6>
                                         <img src="images/missing_image.png" alt="missing image"
                                             class="card-img-top weekly-icon">
