added sessionStorage for dark mode

--- a/Project/index.html
+++ b/Project/index.html
@@ -44,7 +44,7 @@
     <title>Progetto Meteo Live</title>
 </head>
 
-<body onload="currentWeatherHomePage()">
+<body onload="checkDarkMode(); currentWeatherHomePage()">
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
