--- a/Project/weather.html
+++ b/Project/weather.html
@@ -51,7 +51,7 @@
     <title>Progetto Meteo Live</title>
 </head>
 
-<body onload="weeklyWeather(); initializeMap()">
+<body onload="checkDarkMode(); weeklyWeather(); initializeMap()">
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -438,8 +438,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
 
             <div class="container-chart my-3">
