--- a/Project/weather.html
+++ b/Project/weather.html
@@ -103,7 +103,7 @@
             <div class="container mt-4">
                 <div class="card text-center">
                     <div class="card-header">
-                        <h4 class="my-0 f2-normal">Meteo di Oggi (ogni ora)</h4>
+                        <h4 class="my-0 f2-normal">Meteo Corrente</h4>
                     </div>
                     <div class="card-body">
                         <div class="row">
