completed hourly forecast,fixed map responsivenes

--- a/Project/weather.html
+++ b/Project/weather.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div id="current-weather" class="col-6">
+                            <div id="current-weather" class="col-md-6">
                                 <p class="card-text">data</p>
                                 <img src="images/missing_image.png" alt="missing image" class="card-img-top">
                                 <h6 class="card-title">meteo</h6>
@@ -118,7 +118,7 @@
                                     <li class="list-group-item">Vento: </li>
                                 </ul>
                             </div>
-                            <div class="col-6 pe-4">
+                            <div class="col-md-6 pe-4">
                                 <div id="map" class="my-3"></div>
                             </div>
                         </div>
