--- a/Project/index.html
+++ b/Project/index.html
@@ -242,7 +242,8 @@
         <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
     </footer>
 
-    <script src="js/scriptJS.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/utility.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
