--- a/Project/weather.html
+++ b/Project/weather.html
@@ -56,7 +56,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="favicon.ico" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Meteo Live
                 </a>
@@ -458,7 +458,8 @@
         <p>&copy; 2022-2022 Carniselli Davide - Unimi Informatica </p>
     </footer>
 
-    <script src="js/scriptJS.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/utility.js"></script>
     <script src="js/createChart.js"></script>
     <script src="js/createMap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
