--- a/Project/index.html
+++ b/Project/index.html
@@ -65,7 +65,7 @@
                     </ul>
                     <div class="form-check form-switch d-flex">
                         <input class="form-check-input" type="checkbox" role="switch" id="toggle-mode"
-                            onclick="toggleDarkMode()">
+                            onchange="toggleDarkMode()">
                         <label class="form-check-label" for="toggle-mode">Dark Mode</label>
                     </div>
                 </div>
