--- a/Project/weather.html
+++ b/Project/weather.html
@@ -51,7 +51,7 @@
     <title>Progetto Meteo Live</title>
 </head>
 
-<body onload="checkDarkMode(); weeklyWeather(); initializeMap()">
+<body onload="checkDarkMode(); weeklyWeather()">
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -83,7 +83,7 @@
         <div class="container py-3">
             <!-- Main + search bar -->
             <div class="p-3 pb-md-4 mx-auto text-center">
-                <h1>Meteo Settimanale</h1>
+                <h1 id="cityNameWeekly">Meteo Settimanale di Milano</h1>
                 <p>Usa la barra di ricerca per cercare un'altra città e conoscere le sue previsioni settimanali.<a
                         href="#*">*</a></p>
             </div>
@@ -95,7 +95,7 @@
                     <label for="floatingInput">es. Milan, IT</label>
                 </div>
                 <button type="button" class="btn btn-outline-primary flex-shrink-0"
-                    onclick="getWeeklyWeather()">search</button>
+                    onclick="weeklyWeather()">search</button>
                 <button type="button" class="btn btn-outline-secondary flex-shrink-0" onclick="getLocation()"><img
                         src="images/location.png" alt="posizione"></button>
             </div>
@@ -118,9 +118,7 @@
                                     <li class="list-group-item">Vento: </li>
                                 </ul>
                             </div>
-                            <div class="col-md-6 pe-4">
-                                <div id="map" class="my-3"></div>
-                            </div>
+                            <div id="weatherMap" class="col-md-6 pe-4"></div>
                         </div>
                     </div>
                 </div>
@@ -440,9 +438,7 @@
                 </div>
             </div>
 
-            <div class="container-chart my-3">
-                <canvas id="myChart"></canvas>
-            </div>
+            <div id="chartContainer" class="container-chart my-3"></div>
 
             <div id="*" class="pt-3">
                 <p>* I dati sono raccolti usando le API di <a href="https://openweathermap.org/">openweathermap.org</a>
