new schema/meta

--- a/Project/index.html
+++ b/Project/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather">
-    <meta name="description" content="Un'applicazione web per monitorare il meteo di alcune città del mondo.">
+    <meta name="description" content="Un'applicazione web per monitorare il meteo corrente di tutte le città nel mondo.">
     <meta name="color-scheme" content="light dark">
 
     <link rel="icon" href="favicon.ico">
@@ -28,7 +28,7 @@
             "@context": "https://schema.org",
             "@type": "WebPage",
             "name": "Progetto Meteo Live",
-            "description": "Un'applicazione web per monitorare il meteo di alcune città del mondo.",
+            "description": "Un'applicazione web per monitorare il meteo corrente di tutte le città nel mondo.",
             "keywords": "meteo, meteo live, weather, app meteo, web weather",
             "inLanguage": "it",
             "author": {
