--- a/Project/weather.html
+++ b/Project/weather.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather">
-    <meta name="description" content="Un'applicazione web per monitorare il meteo di alcune città del mondo.">
+    <meta name="keywords" content="meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni",
+    <meta name="description" content="Un'applicazione web per monitorare il meteo corrente, orario e settimanale di tutte le città nel mondo.">
 
     <link rel="icon" href="favicon.ico">
 
@@ -27,8 +27,8 @@
             "@context": "https://schema.org",
             "@type": "WebPage",
             "name": "Progetto Meteo Live",
-            "description": "Un'applicazione web per monitorare il meteo di alcune città del mondo.",
-            "keywords": "meteo, meteo live, weather, app meteo, web weather",
+            "description": "Un'applicazione web per monitorare il meteo corrente, orario e settimanale di tutte le città nel mondo.",
+            "keywords": "meteo, meteo live, weather, app meteo, web weather, weekly weather, meteo settimanale, hourly weather, meteo orario, precipitation map, mappa delle precipitazioni",
             "inLanguage": "it",
             "author": {
                 "@type": "Person",
